Fix hidden h1 and wrong font.
- Fix h1 being hidden
- Fix wrong fonts being used

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,13 +41,12 @@ float: left;
 
 h1{
 padding-top:70px;
-font-family: 'Open Sans', sans-serif;
+font-family: 'San Francisco', 'SFNS Display, 'Helvetica Neue', 'Helvetica', 'Open Sans', sans-serif;
 color: #fff;
 text-align: center;
 font-size: 50px;
 font-weight: 300;
 margin: 0 0 10px 0;
-	display:none!important;
 }
 
 
